# parser

./: .gitignore  README.md  dev.py  main.py  pyproject.toml
parser/: main.py
parser/models/: csv_parameters.py  parameters.py  request.py  session.py
src/json/: parameter.json
src/models/: client.py  parameters.py  request.py  session.py
src/parser/: log_format.json  main.py  utils.py
src/parser/models/: client.py  parameters.py  request.py
test/: test_parser.py
test/test_files/: cluster_log_0.csv  log_moodle.csv
test/test_models/: test_client.py  test_parameters.py  test_request.py  test_session.py
