[tool.poetry]
name = "parser"
version = "0.1.0"
description = "Universal parser for server logs"
authors = [
    "Axel Gohier <axel.gohier@etudiant.univ-lr.fr>",
    "Nannito Alcime <nannito.alcime@etudiant.univ-lr.fr>"
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
pytest-asyncio = "^0.21.0"
apachelogs = "^0.6.0"



[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
