[tool.poetry]
name = "parser"
version = "0.1.0"
description = "Universal parser for server logs"
authors = [
    "Axel Gohier <axel.gohier@etudiant.univ-lr.fr>",
    "Nannito Alcime <nannito.alcime@etudiant.univ-lr.fr>"
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^1.10.7"
pytest-asyncio = "^0.21.0"
apache-log-parser = "^1.7.0"
pytest = "^7.3.1"
pandas = "^2.1.1"



[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
